@@ -45,6 +45,7 @@
 #include "ppl6-tests.h"
 #include "../include/config.h"
 
+
 namespace {
 
 class CFileStaticTest : public ::testing::Test {
@@ -62,7 +63,7 @@ class CFileStaticTest : public ::testing::Test {
 };
 
 
-TEST_F(CFileStaticTest, stat) {
+TEST_F(CFileStaticTest, StatOnUSAscii) {
 	ppl6::CDirEntry d;
 	ASSERT_EQ(1,ppl6::CFile::Stat("testdata/filenameUSASCII.txt",d));
 
@@ -70,20 +71,23 @@ TEST_F(CFileStaticTest, stat) {
 	ASSERT_EQ(ppl6::CString("testdata/filenameUSASCII.txt"),d.File);
 }
 
-
-TEST_F(CFileStaticTest, CopyFile) {
-	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copy.tmp"));
+TEST_F(CFileStaticTest, StatOnUtf8) {
 	ppl6::CDirEntry d;
-	ASSERT_EQ(1,ppl6::CFile::Stat("copy.tmp",d));
-	ASSERT_EQ((size_t)1962,d.Size);
+	ASSERT_EQ(1,ppl6::CFile::Stat("testdata/filenameUTF8äöü.txt",d));
 
-	ppl6::CFile ff;
-	ASSERT_EQ(1,ff.Open("copy.tmp"));
-	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
-	ppl6::CFile::DeleteFile("copy.tmp");
+	ASSERT_EQ((size_t)1962,d.Size);
+	ASSERT_EQ(ppl6::CString("testdata/filenameUTF8äöü.txt"),d.File);
 }
 
-TEST_F(CFileStaticTest, Truncate) {
+
+TEST_F(CFileStaticTest, StatOnNonexistingFile) {
+	ppl6::CDirEntry d;
+	ASSERT_EQ(0,ppl6::CFile::Stat("testdata/nonexisting.txt",d));
+
+}
+
+
+TEST_F(CFileStaticTest, TruncateOnUSASCII) {
 	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","truncate.tmp"));
 	ppl6::CDirEntry d;
 	ASSERT_EQ(1,ppl6::CFile::Stat("truncate.tmp",d));
@@ -97,7 +101,384 @@ TEST_F(CFileStaticTest, Truncate) {
 	ppl6::CFile::DeleteFile("truncate.tmp");
 }
 
+TEST_F(CFileStaticTest, TruncateOnUtf8) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","truncateäöüß.tmp"));
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("truncateäöüß.tmp",d));
+	ASSERT_EQ((size_t)1962,d.Size);
+	ASSERT_EQ(1,ppl6::CFile::Truncate("truncateäöüß.tmp",1024));
+	ASSERT_EQ(1,ppl6::CFile::Stat("truncateäöüß.tmp",d));
+	ASSERT_EQ((size_t)1024,d.Size);
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("truncateäöüß.tmp"));
+	ASSERT_EQ(ppl6::CString("657351fba38e20fb0a4713e605f1d6a4"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("truncateäöüß.tmp");
+}
+
+TEST_F(CFileStaticTest, ExistsOnUSAscii) {
+	ASSERT_EQ(1,ppl6::CFile::Exists("testdata/filenameUSASCII.txt"));
+}
+
+TEST_F(CFileStaticTest, ExistsOnUtf8) {
+	ASSERT_EQ(1,ppl6::CFile::Exists("testdata/filenameUTF8äöü.txt"));
+}
+
+TEST_F(CFileStaticTest, ExistsNot) {
+	ASSERT_EQ(0,ppl6::CFile::Exists("testdata/nonexistänt.txt"));
+}
+
+TEST_F(CFileStaticTest, ExistsfOnUSAscii) {
+	ASSERT_EQ(1,ppl6::CFile::Existsf("testdata/%s","filenameUSASCII.txt"));
+}
+
+TEST_F(CFileStaticTest, ExistsfOnUtf8) {
+	ASSERT_EQ(1,ppl6::CFile::Existsf("testdata/%s","filenameUTF8äöü.txt"));
+}
+
+TEST_F(CFileStaticTest, CopyFileUSAscii2USAscii) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copy.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::Exists("testdata/filenameUSASCII.txt")) << "Old file still exists";
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("copy.tmp",d)) << "New file exists";
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("copy.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("copy.tmp");
+}
+
+TEST_F(CFileStaticTest, CopyFileUSAscii2Utf8) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copyäöüß.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::Exists("testdata/filenameUSASCII.txt")) << "Old file still exists";
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("copyäöüß.tmp",d)) << "New file exists";
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("copyäöüß.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("copyäöüß.tmp");
+}
+
+TEST_F(CFileStaticTest, CopyFileUtf82Utf8) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUTF8äöü.txt","copyäöüß.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::Exists("testdata/filenameUTF8äöü.txt")) << "Old file still exists";
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("copyäöüß.tmp",d)) << "New file exists";
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("copyäöüß.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("copyäöüß.tmp");
+}
+
+
+TEST_F(CFileStaticTest, MoveFileUSAscii2USAscii) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copy.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::MoveFile("copy.tmp","move.tmp"));
+	ASSERT_EQ(0,ppl6::CFile::Exists("copy.tmp")) << "Old file has disappeared";
+	ASSERT_EQ(1,ppl6::CFile::Exists("move.tmp")) << "New file exists";
+
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("move.tmp",d));
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("move.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("move.tmp");
+}
+
+TEST_F(CFileStaticTest, MoveFileUSAscii2Utf8) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copy.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::MoveFile("copy.tmp","moveäöü.tmp"));
+	ASSERT_EQ(0,ppl6::CFile::Exists("copy.tmp")) << "Old file has disappeared";
+	ASSERT_EQ(1,ppl6::CFile::Exists("moveäöü.tmp")) << "New file exists";
+
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("moveäöü.tmp",d));
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("moveäöü.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("moveäöü.tmp");
+}
+
+
+TEST_F(CFileStaticTest, MoveFileUtf82USAscii) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copyäöü.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::MoveFile("copyäöü.tmp","move.tmp"));
+	ASSERT_EQ(0,ppl6::CFile::Exists("copyäöü.tmp")) << "Old file has disappeared";
+	ASSERT_EQ(1,ppl6::CFile::Exists("move.tmp")) << "New file exists";
+
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("move.tmp",d));
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("move.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("move.tmp");
+}
+
+TEST_F(CFileStaticTest, MoveFileUtf82Utf8) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copyäöü.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::MoveFile("copyäöü.tmp","moveäöüß.tmp"));
+	ASSERT_EQ(0,ppl6::CFile::Exists("copyäöü.tmp")) << "Old file has disappeared";
+	ASSERT_EQ(1,ppl6::CFile::Exists("moveäöüß.tmp")) << "New file exists";
+
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("moveäöüß.tmp",d));
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("moveäöüß.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("moveäöüß.tmp");
+}
+
+TEST_F(CFileStaticTest, LoadFileUSAscii2CString) {
+	ppl6::CString s;
+	ASSERT_EQ(1,ppl6::CFile::LoadFile(s,"testdata/filenameUSASCII.txt")) << "Loading file to string";
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),s.GetMD5()) << "Checking MD5-sum";
+	ASSERT_EQ((size_t)1962,s.Size()) << "Checking Size";
+}
+
+TEST_F(CFileStaticTest, LoadFileUSAscii2CBinary) {
+	ppl6::CBinary s;
+	ASSERT_EQ(1,ppl6::CFile::LoadFile(s,"testdata/filenameUSASCII.txt")) << "Loading file to string";
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),s.GetMD5Sum()) << "Checking MD5-sum";
+	ASSERT_EQ((size_t)1962,s.Size()) << "Checking Size";
 
 }
 
+TEST_F(CFileStaticTest, LoadFileUtf82CString) {
+	ppl6::CString s;
+	ASSERT_EQ(1,ppl6::CFile::LoadFile(s,"testdata/filenameUTF8äöü.txt")) << "Loading file to string";
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),s.GetMD5()) << "Checking MD5-sum";
+	ASSERT_EQ((size_t)1962,s.Size()) << "Checking Size";
+}
+
+/*
+TEST_F(CFileStaticTest, LoadFileUtf82CWString) {
+	ppl6::CWString s;
+	ASSERT_EQ(1,ppl6::CFile::LoadFile(s,"testdata/unicodeUtf8äöü.txt")) << "Loading file to string";
+	ASSERT_EQ((size_t)1994,s.Size()) << "Checking Size";
+	ASSERT_EQ(ppl6::CWString("c6767ca956f9e3b65164bed63b93d811"),s.GetMD5()) << "Checking MD5-sum";
+}
+*/
+
+TEST_F(CFileStaticTest, LoadFileUtf82CBinary) {
+	ppl6::CBinary s;
+	ASSERT_EQ(1,ppl6::CFile::LoadFile(s,"testdata/filenameUTF8äöü.txt")) << "Loading file to string";
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),s.GetMD5Sum()) << "Checking MD5-sum";
+	ASSERT_EQ((size_t)1962,s.Size()) << "Checking Size";
+}
+
+TEST_F(CFileStaticTest, LoadFileUSAscii2Ptr) {
+	void *adr;
+	size_t size;
+	adr=ppl6::CFile::LoadFile("testdata/filenameUSASCII.txt",&size);
+	ASSERT_TRUE(adr!=NULL) << "Loading file to ptr";
+	ASSERT_EQ((size_t)1962,size) << "Checking Size";
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ppl6::MD5(adr,size)) << "Checking MD5-sum";
+}
+
+TEST_F(CFileStaticTest, LoadFileUtf82Ptr) {
+	void *adr;
+	size_t size;
+	adr=ppl6::CFile::LoadFile("testdata/unicodeUtf8äöü.txt",&size);
+	ASSERT_TRUE(adr!=NULL) << "Loading file to ptr";
+	ASSERT_EQ((size_t)7976,size) << "Checking Size";
+	ASSERT_EQ(ppl6::CString("c6767ca956f9e3b65164bed63b93d811"),ppl6::MD5(adr,size)) << "Checking MD5-sum";
+}
+
+TEST_F(CFileStaticTest, DeleteFileUSAscii) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","todelete.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::DeleteFile("todelete.tmp")) << "deleting file";
+	ASSERT_EQ(0,ppl6::CFile::Exists("todelete.tmp")) << "file does not exists anymore";
+}
+
+TEST_F(CFileStaticTest, DeleteFileUtf8) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","todeleteäöü.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::DeleteFile("todeleteäöü.tmp")) << "deleting file";
+	ASSERT_EQ(0,ppl6::CFile::Exists("todeleteäöü.tmp")) << "file does not exists anymore";
+}
+
+TEST_F(CFileStaticTest, DeleteFilefUSAscii) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","todelete.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::DeleteFilef("%s","todelete.tmp")) << "deleting file";
+	ASSERT_EQ(0,ppl6::CFile::Exists("todelete.tmp")) << "file does not exists anymore";
+}
+
+TEST_F(CFileStaticTest, DeletefFileUtf8) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","todeleteäöü.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::DeleteFilef("%s","todeleteäöü.tmp")) << "deleting file";
+	ASSERT_EQ(0,ppl6::CFile::Exists("todeleteäöü.tmp")) << "file does not exists anymore";
+}
+
+TEST_F(CFileStaticTest, TouchFileUSAscii) {
+	ASSERT_EQ(1,ppl6::CFile::TouchFile("touched.tmp")) << "touching file";
+	ASSERT_EQ(1,ppl6::CFile::Exists("touched.tmp")) << "file exists";
+	ASSERT_EQ(1,ppl6::CFile::DeleteFile("touched.tmp")) << "deleting file";
+}
+
+TEST_F(CFileStaticTest, TouchFileUtf8) {
+	ASSERT_EQ(1,ppl6::CFile::TouchFile("touchedäöü.tmp")) << "touching file";
+	ASSERT_EQ(1,ppl6::CFile::Exists("touchedäöü.tmp")) << "file exists";
+	ASSERT_EQ(1,ppl6::CFile::DeleteFile("touchedäöü.tmp")) << "deleting file";
+}
+
+TEST_F(CFileStaticTest, TouchFilefUSAscii) {
+	ASSERT_EQ(1,ppl6::CFile::TouchFilef("%s.%s","touched","tmp")) << "touching file";
+	ASSERT_EQ(1,ppl6::CFile::Exists("touched.tmp")) << "file exists";
+	ASSERT_EQ(1,ppl6::CFile::DeleteFile("touched.tmp")) << "deleting file";
+}
+
+TEST_F(CFileStaticTest, TouchFilefUtf8) {
+	ASSERT_EQ(1,ppl6::CFile::TouchFilef("%s.%s","touchedäöü","tmp")) << "touching file";
+	ASSERT_EQ(1,ppl6::CFile::Exists("touchedäöü.tmp")) << "file exists";
+	ASSERT_EQ(1,ppl6::CFile::DeleteFile("touchedäöü.tmp")) << "deleting file";
+}
+
+TEST_F(CFileStaticTest, WriteFileUSAscii) {
+	ASSERT_EQ(1,ppl6::CFile::WriteFile(loremipsum,strlen(loremipsum),"writetest.tmp")) << "writing file";
+	ASSERT_EQ(1,ppl6::CFile::Exists("writetest.tmp")) << "file exists";
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("writetest.tmp",d)) << "Stat on file is working";
+	ASSERT_EQ((size_t)strlen(loremipsum),d.Size) << "filesize as expected";
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("writetest.tmp"));
+	ASSERT_EQ(ppl6::CString(loremipsum_md5),ff.MD5Sum()) << "md5sum of file is correct";
+	ASSERT_EQ(1,ppl6::CFile::DeleteFile("writetest.tmp")) << "deleting file";
+}
+
+TEST_F(CFileStaticTest, WriteFileUtf8) {
+	ASSERT_EQ(1,ppl6::CFile::WriteFile(loremipsum,strlen(loremipsum),"writetestäöü.tmp")) << "writing file";
+	ASSERT_EQ(1,ppl6::CFile::Exists("writetestäöü.tmp")) << "file exists";
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("writetestäöü.tmp",d)) << "Stat on file is working";
+	ASSERT_EQ((size_t)strlen(loremipsum),d.Size) << "filesize as expected";
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("writetestäöü.tmp"));
+	ASSERT_EQ(ppl6::CString(loremipsum_md5),ff.MD5Sum()) << "md5sum of file is correct";
+	ASSERT_EQ(1,ppl6::CFile::DeleteFile("writetestäöü.tmp")) << "deleting file";
+}
+
+TEST_F(CFileStaticTest, WriteFilefUSAscii) {
+	ASSERT_EQ(1,ppl6::CFile::WriteFilef(loremipsum,strlen(loremipsum),"%s.%s","writetest","tmp")) << "writing file";
+	ASSERT_EQ(1,ppl6::CFile::Exists("writetest.tmp")) << "file exists";
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("writetest.tmp",d)) << "Stat on file is working";
+	ASSERT_EQ((size_t)strlen(loremipsum),d.Size) << "filesize as expected";
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("writetest.tmp"));
+	ASSERT_EQ(ppl6::CString(loremipsum_md5),ff.MD5Sum()) << "md5sum of file is correct";
+	ASSERT_EQ(1,ppl6::CFile::DeleteFile("writetest.tmp")) << "deleting file";
+}
+
+TEST_F(CFileStaticTest, WriteFilefUtf8) {
+	ASSERT_EQ(1,ppl6::CFile::WriteFilef(loremipsum,strlen(loremipsum),"%s.%s","writetestäöü","tmp")) << "writing file";
+	ASSERT_EQ(1,ppl6::CFile::Exists("writetestäöü.tmp")) << "file exists";
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("writetestäöü.tmp",d)) << "Stat on file is working";
+	ASSERT_EQ((size_t)strlen(loremipsum),d.Size) << "filesize as expected";
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("writetestäöü.tmp"));
+	ASSERT_EQ(ppl6::CString(loremipsum_md5),ff.MD5Sum()) << "md5sum of file is correct";
+	ASSERT_EQ(1,ppl6::CFile::DeleteFile("writetestäöü.tmp")) << "deleting file";
+}
+
+TEST_F(CFileStaticTest, RenameFileUSAscii2USAscii) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copy.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::RenameFile("copy.tmp","move.tmp"));
+	ASSERT_EQ(0,ppl6::CFile::Exists("copy.tmp")) << "Old file has disappeared";
+	ASSERT_EQ(1,ppl6::CFile::Exists("move.tmp")) << "New file exists";
+
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("move.tmp",d));
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("move.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("move.tmp");
+}
+
+TEST_F(CFileStaticTest, RenameFileUSAscii2Utf8) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copy.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::RenameFile("copy.tmp","moveäöü.tmp"));
+	ASSERT_EQ(0,ppl6::CFile::Exists("copy.tmp")) << "Old file has disappeared";
+	ASSERT_EQ(1,ppl6::CFile::Exists("moveäöü.tmp")) << "New file exists";
+
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("moveäöü.tmp",d));
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("moveäöü.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("moveäöü.tmp");
+}
+
+
+TEST_F(CFileStaticTest, RenameFileUtf82USAscii) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copyäöü.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::RenameFile("copyäöü.tmp","move.tmp"));
+	ASSERT_EQ(0,ppl6::CFile::Exists("copyäöü.tmp")) << "Old file has disappeared";
+	ASSERT_EQ(1,ppl6::CFile::Exists("move.tmp")) << "New file exists";
+
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("move.tmp",d));
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("move.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("move.tmp");
+}
+
+TEST_F(CFileStaticTest, RenameFileUtf82Utf8) {
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","copyäöü.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::RenameFile("copyäöü.tmp","moveäöüß.tmp"));
+	ASSERT_EQ(0,ppl6::CFile::Exists("copyäöü.tmp")) << "Old file has disappeared";
+	ASSERT_EQ(1,ppl6::CFile::Exists("moveäöüß.tmp")) << "New file exists";
+
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("moveäöüß.tmp",d));
+	ASSERT_EQ((size_t)1962,d.Size);
+
+	ppl6::CFile ff;
+	ASSERT_EQ(1,ff.Open("moveäöüß.tmp"));
+	ASSERT_EQ(ppl6::CString("978fd668b5755ce6017256d0ff9e36b2"),ff.MD5Sum());
+	ppl6::CFile::DeleteFile("moveäöüß.tmp");
+}
+
+/*
+ * TODO: Chmod und Stat interpretieren die Attribute unterschiedlich
+ */
+/*
+TEST_F(CFileStaticTest, ChmodUSAscii) {
+	ppl6::CFile::Chmod("chmod1.tmp",ppl6::FILEATTR::USR_READ|ppl6::FILEATTR::USR_WRITE);
+	ASSERT_EQ(1,ppl6::CFile::CopyFile("testdata/filenameUSASCII.txt","chmod1.tmp"));
+	ASSERT_EQ(1,ppl6::CFile::Chmod("chmod1.tmp",ppl6::FILEATTR::USR_READ));
+	ppl6::CDirEntry d;
+	ASSERT_EQ(1,ppl6::CFile::Stat("chmod1.tmp",d)) << "Stat on file";
+	d.Print();
+	ASSERT_EQ(ppl6::FILEATTR::USR_READ,d.Attrib&ppl6::FILEATTR::USR_READ);
+	ASSERT_NE(ppl6::FILEATTR::USR_WRITE,d.Attrib&ppl6::FILEATTR::USR_WRITE);
+	ppl6::CFile::DeleteFile("chmod1.tmp");
+
+}
+*/
+
+
+} // EOF namespace
 
