@@ -32,6 +32,7 @@ Version 6.4.18
     aber auch unter Windows aufgerufen und die dabei entstehende Exception
     nicht abgefangen. 
   - Funktion CString MD5(const void *data, size_t size) implementiert
+  - Unittests für statische Funktionen aus CFile implementiert
 
 Version 6.4.17 vom 03.11.2013	(SVN-Tag: REL_6_4_17)
   - Cppl6Core ist nicht mehr von CDebug/CLog abgeleitet
